[package]
name = "rusty_wren"
description = "Backend for wren"
version = "0.1.0"
edition = "2021"
authors = ["BorisZhguchev <zhguchev@gmail.com>"]
license-file = "LICENSE"
homepage = "https://github.com/besok/rusty_wren"
repository = "https://github.com/besok/rusty_wren"
readme = "README.md"
keywords = ["wren", "llvm", "backend", "language","compiler"]
categories = ["api-bindings", "compilers", "parsing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
logos-derive = "0.12.1"
[dev-dependencies]